@@ -5,6 +5,7 @@ ClanSphere 2010.0 Final >> 2010-07-XX
 ___________________________________________________________
 
 -> Added full support for Microsoft IIS 7.0 and 7.5 webserver (hajo)
+-> Added full support for Microsoft SQL Server 2005+ with PDO (hajo)
 -> Fixed cups module (spongebob)
 -> Fixed error page for PHP 4 to be shown again (hajo)
 -> Removed a part of the upload htaccess file as it caused some errors (hajo)
